--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    -webkit-tap-highlight-color: transparent;
+ }
 .roboto{
     font-family: 'Lato', sans-serif;
 }
